--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+  }
+  
+  html {
+    height: 100%;
+  }
+  
+  body {
+    font-family: "Poppins", sans-serif;
+    background: radial-gradient(circle at top left, #2b3c88, #112e59);
+    color: #cbdefa;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
